Create products from sell order (#9)
* use modules for importing sell order

* handle offer change

* add success field to check if sellOrder is completed

* fix circular import problem

* remove debug print

* remove debug print

* update submit sell order endpoint

* rename steam.js to routes

* move utilities to utils

* enable createIndex function since ensureIndex is deprecated.

* change unique fields

* add appId to unique fields

* remove save hook to create product from sell orders

* use new asset id to work with item after trade

* create product from sell order if trade is accepted

* fix import user model

* add timestamps to models

* set tradeable only to false to create products

* use tradable to know if item is ready to be traded

* fix importing products model

* fix importing user model

* fix circular dependency in bot and product services

* remove offer auto accept

* fix field types

* get complete item info when creating product

* fix imports

* remove unused code

* remove unused code

* remove unused code

* fix error handling
