# src/api/products/products.services.js
@@ -1,36 +1,30 @@
-const {logger} = require('../../config/winston');
-const Product = require('../../models/product.model');
-const {getBotInventory} = require("../../utils/bot");
+const {logger} = require('../../utils/winston');
+const {Product} = require('../../models/product.model');
 
-async function createProductFromSellOrder(sellOrder) {
-  const inventory = await getBotInventory(sellOrder.appId, sellOrder.contextId, true);
-  const item = inventory.find((i) => i.assetid === sellOrder.assetId);
-  if (item === undefined) {
-    logger.error(`Could not find Item from sellOrder ${sellOrder} in inventory`);
-  } else {
-    Product.create({
-      seller: sellOrder.seller,
-      price: sellOrder.price,
-      productId: item.assetid,
-      appId: item.appid,
-      classId: item.classid,
-      instanseId: item.instanceid,
-      assetId: item.assetid,
-      contextId: item.contextid,
-      iconUrl: item.icon_url,
-      iconUrlLarge: item.icon_url_large,
-      name: item.name,
-      post: item.pos,
-      marketHashName: item.market_hash_name,
-      marketName: item.market_name,
-      nameColor: item.name_color,
-      backgroundColor: item.background_color,
-      type: item.type,
-      marketable: item.marketable,
-      commodity: item.commodity,
-      descriptions: item.descriptions.map((x) => x.value),
-    });
-  }
+async function createProductFromSellOrder(sellOrder, item) {
+  await Product.create({
+    seller: sellOrder.seller,
+    price: sellOrder.price,
+    isTradable: item.tradable,
+    productId: item.assetid,
+    appId: item.appid,
+    classId: item.classid,
+    instanseId: item.instanceid,
+    assetId: item.assetid,
+    contextId: item.contextid,
+    iconUrl: item.icon_url,
+    iconUrlLarge: item.icon_url_large,
+    name: item.name,
+    marketHashName: item.market_hash_name,
+    marketName: item.market_name,
+    nameColor: item.name_color,
+    backgroundColor: item.background_color,
+    type: item.type,
+    marketable: item.marketable,
+    commodity: item.commodity,
+    descriptions: item.descriptions.map((x) => x.value),
+    tags: item.tags
+  });
 }
 
 module.exports = {createProductFromSellOrder};
