# src/api/sell/sell.routes.js
@@ -1,9 +1,9 @@
 const express = require('express');
-const SellOrder = require('../../models/sellOrder.model');
+const {SellOrder} = require('../../models/sellOrder.model');
 const {TradeOffer} = require("../../models/tradeOffer.model");
 const {sendDepositTrade, getUserInventory} = require("../../utils/bot");
 const {User} = require('../../models/user.model');
-const {logger} = require('../../config/winston');
+const {logger} = require('../../utils/winston');
 const {editSellOrder} = require('./sell.controllers');
 
 const router = express.Router();
@@ -16,50 +16,47 @@ router.get('/', async (req, res) => {
 
 router.put('/', editSellOrder);
 
-router.post('/', async (req, res) => {
+router.post('/', async (req, res, next) => {
   const price = req.body.price;
   const appId = req.body.appId;
   const contextId = req.body.contextId;
   const assetId = req.body.assetId;
 
-  const inventory = await getUserInventory(req.user.steamId, appId, contextId, true);
+  const inventory = await getUserInventory(req.user.steamId, appId, contextId, true).catch((err => {
+    logger.error(`could not fetch inventory ${err}`)
+    next(err)
+  }));
   const item = inventory.find((i) => i.assetid === assetId);
-  const user = await User.findOne({steamId: req.user.steamId});
-  let sellOrder = undefined;
-  try {
-    sellOrder = await SellOrder.create({
-      seller: user,
-      price,
-      appId: item.appid,
-      contextId: item.contextid,
-      assetId: item.assetid,
-    });
-  } catch (error) {
-    logger.error(error);
-    res.statusCode = 400;
-    res.json({detail: 'already submitted for sell'});
-    return;
+  if (item === undefined) {
+    res.status(400).json({detail: 'this item does not exists in your inventory'});
   }
+
+  const user = await User.findOne({steamId: req.user.steamId});
+  let sellOrder = await SellOrder.create({
+    seller: user,
+    price,
+    appId: item.appid,
+    contextId: item.contextid,
+    assetId: item.assetid,
+  }).catch(err => {
+    logger.error(`create sell order error: ${err}`)
+    next(err)
+  });
+
   sendDepositTrade(req.user.steamId, item.assetid, async (err, success, offerId) => {
     if (err) {
       logger.error(`sendDepositTradeErro : ${err}`);
-      res.status(500).json({detail: 'cannot trade item, try again'});
-      return ;
-    }
-    let tradeStatus;
-    if (success){
-      tradeStatus = 'succesful';
-    } else {
-      tradeStatus = 'failed';
+      res.status(503)
     }
     sellOrder.tradeOffer = await TradeOffer.create({
       offerId: offerId,
-      tradeStatus: tradeStatus,
       user: user
+    }).catch(error => {
+      logger.error(`cannot create tradeOffer ${error}`)
+      next(error)
     });
     sellOrder.save();
     res.json({sellOrder, success, offerId});
   });
-
 });
 module.exports = router;
